--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <nav class="fixed top-0 w-full bg-white/90 backdrop-blur z-40 border-b">
     <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-      <img src="https://i.imgur.com/vnB21TO.png" alt="uHate2Paint LLC" class="h-14">
+      <img src="logo.png" alt="uHate2Paint LLC" class="h-14">
       <div class="hidden md:flex space-x-10 text-lg">
         <a href="#services" class="hover:text-orange-500">Services</a>
         <a href="#portfolio" class="hover:text-orange-500">Portfolio</a>
@@ -32,7 +32,7 @@
 
   <header class="hero">
     <div class="content max-w-5xl mx-auto">
-      <img src="https://i.imgur.com/vnB21TO.png" alt="uHate2Paint LLC" class="mx-auto w-full max-w-4xl mb-10 drop-shadow-2xl">
+      <img src="logo.png" alt="uHate2Paint LLC" class="mx-auto w-full max-w-4xl mb-10 drop-shadow-2xl">
       <h1 class="text-5xl md:text-7xl font-bold mb-6 drop-shadow-2xl">You Hate to Paint?<br>We LOVE It.</h1>
       <p class="text-2xl md:text-4xl mb-12 drop-shadow-lg">High-End Residential Painting • Jensen Beach & Treasure Coast</p>
       <div class="space-x-6">
@@ -42,131 +42,9 @@
     </div>
   </header>
 
-  <section id="portfolio" class="py-32 px-6 bg-gray-50 text-center">
-    <h2 class="text-5xl md:text-6xl font-bold mb-20">Portfolio Gallery</h2>
+  <section id="portfolio" class="py-32 px-6 bg-white text-center">
+    <h2 class="text-5xl md:text-6xl font-bold mb-20">Recent Transformations</h2>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10 max-w-7xl mx-auto">
-      <!-- House Re-Paint -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/cCuh0U5.jpg" alt="House re-paint before" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">House Re-Paint Before</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/3YphS6Q.jpg" alt="House re-paint in progress" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">House Re-Paint In Progress</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/SZxdieg.jpg" alt="House re-paint side view" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">House Re-Paint Side View</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/EYAECpc.jpg" alt="House re-paint after" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">House Re-Paint After</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/GkKqt09.jpg" alt="House re-paint detail" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">House Re-Paint Detail</figcaption>
-      </figure>
-      <!-- Pool Deck & Lanai Coatings -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/PnIQ4Cb.jpg" alt="Pool deck before" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Pool Deck Before</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/ZA035HT.jpg" alt="Pool deck in progress" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Pool Deck In Progress</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/MWJJWNA.jpg" alt="Pool deck after" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Pool Deck After</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/gsM4qwf.jpg" alt="Lanai coating before" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Lanai Coating Before</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/vzFFVUB.jpg" alt="Lanai coating after" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Lanai Coating After</figcaption>
-      </figure>
-      <!-- Garage Floor Epoxy Coatings -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/TknwIgw.jpg" alt="Garage floor before" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Before</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/GOyK7o5.jpg" alt="Garage floor prep" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Prep</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/usdiyBZ.jpg" alt="Garage floor in progress" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor In Progress</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/bqH5Ssa.jpg" alt="Garage floor after" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor After</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/l5bwEOd.jpg" alt="Garage floor detail" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Detail</figcaption>
-      </figure>
-      <!-- Interior Trim & Doors (Faux Wood) -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/T5iTfZG.jpg" alt="Faux wood trim before" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Faux Wood Trim Before</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/93QpnjE.jpg" alt="Faux wood trim in progress" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Faux Wood Trim In Progress</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/FIlPC2L.jpg" alt="Faux wood doors before" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Faux Wood Doors Before</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/ehdfitb.jpg" alt="Faux wood doors after" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Faux Wood Doors After</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/D2w4GeK.jpg" alt="Faux wood trim after" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Faux Wood Trim After</figcaption>
-      </figure>
-      <!-- Kitchen Cabinet Refinishing -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/VZuX0PW.jpg" alt="Kitchen cabinet before" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing Before</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/1VpiGUR.jpg" alt="Kitchen cabinet before" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing Before</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/29VI4Ld.jpg" alt="Kitchen cabinet prep" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing Prep</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/urvdwqg.jpg" alt="Kitchen cabinet in progress" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing In Progress</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/oIB94gh.jpg" alt="Kitchen cabinet after" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing After</figcaption>
-      </figure>
-      <!-- Bathroom Cabinet Refinishing -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/y4deTDh.jpg" alt="Bathroom cabinet before" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing Before</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/1rg4fiA.jpg" alt="Bathroom cabinet after" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing After</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/vX95qgY.jpg" alt="Bathroom cabinet detail" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing Detail</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/5uxz6MG.jpg" alt="Bathroom cabinet vanity" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing Vanity</figcaption>
-      </figure>
       <!-- Fence Staining -->
       <figure class="rounded-2xl shadow-2xl overflow-hidden">
         <img src="https://i.imgur.com/G7msFDI.jpg" alt="Fence staining before" class="w-full h-64 object-cover gallery-img">
@@ -190,12 +68,4 @@
       </figure>
       <figure class="rounded-2xl shadow-2xl overflow-hidden">
         <img src="https://i.imgur.com/YpTUAW4.jpg" alt="Fence staining after" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Fence Staining After</figcaption>
-      </figure>
-    </div>
-  </section>
-
-  <section id="contact" class="py-32 px-6 bg-gradient-to-br from-blue-950 to-blue-700 text-white text-center">
-    <h2 class="text-5xl md:text-6xl font-bold mb-10">Elevate Your Home</h2>
-    <p class="text-2xl mb-12">Free consultations • Detailed quotes within 24 hours</p>
-    <p class="text-5xl mb-12"><a href="tel:
+        <figcaption class="p-4 text-gray-700 bg-white">Fence Staining After</figcaption
