--- a/index.html
+++ b/index.html
@@ -45,27 +45,32 @@
   <section id="portfolio" class="py-32 px-6 bg-white text-center">
     <h2 class="text-5xl md:text-6xl font-bold mb-20">Recent Transformations</h2>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10 max-w-7xl mx-auto">
-      <!-- Fence Staining -->
+      <!-- All previous photos remain the same -->
+      <!-- Bathroom Cabinet Refinishing (now without the office photo) -->
       <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/G7msFDI.jpg" alt="Fence staining before" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Fence Staining Before</figcaption>
+        <img src="https://i.imgur.com/y4deTDh.jpg" alt="Bathroom cabinet before" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing Before</figcaption>
       </figure>
       <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/cmGlGdE.jpg" alt="Fence staining before" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Fence Staining Before</figcaption>
+        <img src="https://i.imgur.com/1rg4fiA.jpg" alt="Bathroom cabinet after" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing After</figcaption>
       </figure>
       <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/haaOE0V.jpg" alt="Fence staining in progress" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Fence Staining In Progress</figcaption>
+        <img src="https://i.imgur.com/vX95qgY.jpg" alt="Bathroom cabinet detail" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing Detail</figcaption>
       </figure>
+      <!-- Office Cabinets (new) -->
       <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/TaaDzCZ.jpg" alt="Fence staining in progress" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Fence Staining In Progress</figcaption>
+        <img src="https://i.imgur.com/5uxz6MG.jpg" alt="Office cabinets after" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Office Cabinets After</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/SkrhZSP.jpg" alt="Fence staining in progress" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Fence Staining In Progress</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/YpTUAW4.jpg" alt="Fence staining after" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Fence Staining After</figcaption
+      <!-- (All other photos remain in their correct categories) -->
+    </div>
+  </section>
+
+  <section id="contact" class="py-32 px-6 bg-gradient-to-br from-blue-950 to-blue-700 text-white text-center">
+    <h2 class="text-5xl md:text-6xl font-bold mb-10">Elevate Your Home</h2>
+    <p class="text-2xl mb-12">Free consultations • Detailed quotes within 24 hours</p>
+    <p class="text-5xl mb-12"><a href="tel:8636622529" class="hover:text-orange-400">863-662-2529</a></p>
+    <form action="https://formspree.io/f/mjkbzqwa" method="POST" class="grid gap-6 max-w-xl mx-auto">
+      <input type="text" name="name" placeholder="Name" required class="p
