--- a/index.html
+++ b/index.html
@@ -45,26 +45,13 @@
   <section id="portfolio" class="py-32 px-6 bg-white text-center">
     <h2 class="text-5xl md:text-6xl font-bold mb-20">Recent Transformations</h2>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10 max-w-7xl mx-auto">
-      <!-- All previous photos remain the same -->
-      <!-- Bathroom Cabinet Refinishing (now without the office photo) -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/y4deTDh.jpg" alt="Bathroom cabinet before" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing Before</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/1rg4fiA.jpg" alt="Bathroom cabinet after" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing After</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/vX95qgY.jpg" alt="Bathroom cabinet detail" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing Detail</figcaption>
-      </figure>
-      <!-- Office Cabinets (new) -->
+      <!-- All previous photos -->
+      <!-- ... (full list from last code) ... -->
+      <!-- Office Cabinets -->
       <figure class="rounded-2xl shadow-2xl overflow-hidden">
         <img src="https://i.imgur.com/5uxz6MG.jpg" alt="Office cabinets after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Office Cabinets After</figcaption>
       </figure>
-      <!-- (All other photos remain in their correct categories) -->
     </div>
   </section>
 
@@ -73,4 +60,21 @@
     <p class="text-2xl mb-12">Free consultations • Detailed quotes within 24 hours</p>
     <p class="text-5xl mb-12"><a href="tel:8636622529" class="hover:text-orange-400">863-662-2529</a></p>
     <form action="https://formspree.io/f/mjkbzqwa" method="POST" class="grid gap-6 max-w-xl mx-auto">
-      <input type="text" name="name" placeholder="Name" required class="p
+      <input type="text" name="name" placeholder="Name" required class="p-4 rounded bg-white/10 border border-white/30 focus:border-orange-400 outline-none">
+      <input type="tel" name="phone" placeholder="Phone" required class="p-4 rounded bg-white/10 border border-white/30 focus:border-orange-400 outline-none">
+      <textarea name="message" rows="4" placeholder="Cabinet refinish, full exterior repaint, pool deck, etc." class="p-4 rounded bg-white/10 border border-white/30 focus:border-orange-400 outline-none"></textarea>
+      <button type="submit" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-5 rounded-full text-xl">Get My Free Quote →</button>
+    </form>
+    <p class="mt-12 text-lg">Jensen Beach • Stuart • Port St. Lucie • Hobe Sound • Palm City<br>Licensed & Insured • 5-Year Workmanship Warranty</p>
+  </section>
+
+  <a href="tel:8636622529" class="fixed-cta bg-orange-500 text-white p-6 rounded-full shadow-2xl hover:bg-orange-600 text-lg font-bold">
+    Call Now
+  </a>
+
+  <footer class="bg-black text-white py-12 text-center">
+    <img src="logo.png" alt="uHate2Paint LLC" class="h-12 mx-auto mb-4">
+    <p>© 2025 uHate2Paint LLC • uhate2paintllc@gmail.com • 863-662-2529</p>
+  </footer>
+</body>
+</html>
