--- a/index.html
+++ b/index.html
@@ -8,20 +8,28 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    body,html{margin:0;height:100%}
     h1,h2,h3{font-family:'Playfair Display',serif}body{font-family:'Inter',sans-serif}
-    .hero{background:url('https://i.imgur.com/vnB21TO.png') center/cover no-repeat fixed;height:100vh;display:flex;align-items:center;justify-content:center;text-align:center;position:relative;}
-    .hero::before{content:'';position:absolute;inset:0;background:rgba(0,0,0,0.5);}
+    .hero{
+      background:url('https://i.imgur.com/vnB21TO.png') center/cover no-repeat fixed;
+      height:100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      text-align:center;
+      position:relative;
+    }
+    .hero::before{content:'';position:absolute;inset:0;background:rgba(0,0,0,0.48);}
     .content{position:relative;color:white;padding:2rem;}
-    .gallery-img{transition:transform 0.3s ease;}
-    .gallery-img:hover{transform:scale(1.05);}
+    .logo{max-width:90vw;}
     .fixed-cta{position:fixed;bottom:30px;right:30px;z-index:50;}
   </style>
 </head>
-<body class="bg-white text-gray-800">
+<body>
 
   <nav class="fixed top-0 w-full bg-white/90 backdrop-blur z-40 border-b">
     <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-      <img src="logo.png" alt="uHate2Paint LLC" class="h-14">
+      <img src="https://i.imgur.com/vnB21TO.png" alt="uHate2Paint LLC" class="h-14">
       <div class="hidden md:flex space-x-10 text-lg">
         <a href="#services" class="hover:text-orange-500">Services</a>
         <a href="#portfolio" class="hover:text-orange-500">Portfolio</a>
@@ -30,51 +38,6 @@
     </div>
   </nav>
 
+  <!-- YOUR OFFICE CABINET PHOTO AS FULL BACKGROUND -->
   <header class="hero">
-    <div class="content max-w-5xl mx-auto">
-      <img src="logo.png" alt="uHate2Paint LLC" class="mx-auto w-full max-w-4xl mb-10 drop-shadow-2xl">
-      <h1 class="text-5xl md:text-7xl font-bold mb-6 drop-shadow-2xl">You Hate to Paint?<br>We LOVE It.</h1>
-      <p class="text-2xl md:text-4xl mb-12 drop-shadow-lg">High-End Residential Painting • Jensen Beach & Treasure Coast</p>
-      <div class="space-x-6">
-        <a href="tel:8636622529" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-5 px-14 rounded-full text-2xl shadow-2xl">Call 863-662-2529</a>
-        <a href="#contact" class="bg-white text-blue-900 hover:bg-gray-100 font-bold py-5 px-14 rounded-full text-2xl shadow-2xl">Free Estimate</a>
-      </div>
-    </div>
-  </header>
-
-  <section id="portfolio" class="py-32 px-6 bg-white text-center">
-    <h2 class="text-5xl md:text-6xl font-bold mb-20">Recent Transformations</h2>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-10 max-w-7xl mx-auto">
-      <!-- All previous photos -->
-      <!-- ... (full list from last code) ... -->
-      <!-- Office Cabinets -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden">
-        <img src="https://i.imgur.com/5uxz6MG.jpg" alt="Office cabinets after" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Office Cabinets After</figcaption>
-      </figure>
-    </div>
-  </section>
-
-  <section id="contact" class="py-32 px-6 bg-gradient-to-br from-blue-950 to-blue-700 text-white text-center">
-    <h2 class="text-5xl md:text-6xl font-bold mb-10">Elevate Your Home</h2>
-    <p class="text-2xl mb-12">Free consultations • Detailed quotes within 24 hours</p>
-    <p class="text-5xl mb-12"><a href="tel:8636622529" class="hover:text-orange-400">863-662-2529</a></p>
-    <form action="https://formspree.io/f/mjkbzqwa" method="POST" class="grid gap-6 max-w-xl mx-auto">
-      <input type="text" name="name" placeholder="Name" required class="p-4 rounded bg-white/10 border border-white/30 focus:border-orange-400 outline-none">
-      <input type="tel" name="phone" placeholder="Phone" required class="p-4 rounded bg-white/10 border border-white/30 focus:border-orange-400 outline-none">
-      <textarea name="message" rows="4" placeholder="Cabinet refinish, full exterior repaint, pool deck, etc." class="p-4 rounded bg-white/10 border border-white/30 focus:border-orange-400 outline-none"></textarea>
-      <button type="submit" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-5 rounded-full text-xl">Get My Free Quote →</button>
-    </form>
-    <p class="mt-12 text-lg">Jensen Beach • Stuart • Port St. Lucie • Hobe Sound • Palm City<br>Licensed & Insured • 5-Year Workmanship Warranty</p>
-  </section>
-
-  <a href="tel:8636622529" class="fixed-cta bg-orange-500 text-white p-6 rounded-full shadow-2xl hover:bg-orange-600 text-lg font-bold">
-    Call Now
-  </a>
-
-  <footer class="bg-black text-white py-12 text-center">
-    <img src="logo.png" alt="uHate2Paint LLC" class="h-12 mx-auto mb-4">
-    <p>© 2025 uHate2Paint LLC • uhate2paintllc@gmail.com • 863-662-2529</p>
-  </footer>
-</body>
-</html>
+    <div class="content max-w-5xl mx-auto
