--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     }
     .hero::before{content:'';position:absolute;inset:0;background:rgba(0,0,0,0.45);}
     .content{position:relative;color:white;padding:2rem;}
-    .logo{max-width:90vw;}
     .fixed-cta{position:fixed;bottom:30px;right:30px;z-index:50;}
   </style>
 </head>
@@ -29,7 +28,7 @@
 
   <nav class="fixed top-0 w-full bg-white/90 backdrop-blur z-40 border-b">
     <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-      <img src="https://i.imgur.com/vnB21TO.png" alt="uHate2Paint LLC" class="h-14">
+      <img src="https://i.imgur.com/vnB21TO.png" alt="uHate2Paint LLC" class="h-20">
       <div class="hidden md:flex space-x-10 text-lg">
         <a href="#services" class="hover:text-orange-500">Services</a>
         <a href="#portfolio" class="hover:text-orange-500">Portfolio</a>
@@ -38,23 +37,7 @@
     </div>
   </nav>
 
-  <!-- THIS PHOTO AS FULL HERO BACKGROUND -->
+  <!-- YOUR DOOR PHOTO AS FULL BACKGROUND (no centered logo) -->
   <header class="hero">
     <div class="content max-w-5xl mx-auto">
-      <img src="https://i.imgur.com/vnB21TO.png" alt="uHate2Paint LLC" class="logo mb-10 drop-shadow-2xl">
-      <h1 class="text-5xl md:text-7xl font-bold mb-6 drop-shadow-2xl">You Hate to Paint?<br>We LOVE It.</h1>
-      <p class="text-2xl md:text-4xl mb-12 drop-shadow-lg">High-End Residential Painting • Jensen Beach & Treasure Coast</p>
-      <div class="space-x-6">
-        <a href="tel:8636622529" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-5 px-14 rounded-full text-2xl shadow-2xl">Call 863-662-2529</a>
-        <a href="#contact" class="bg-white text-blue-900 hover:bg-gray-100 font-bold py-5 px-14 rounded-full text-2xl shadow-2xl">Free Estimate</a>
-      </div>
-    </div>
-  </header>
-
-  <!-- Portfolio, Contact, Footer remain the same as last version -->
-
-  <a href="tel:8636622529" class="fixed-cta bg-orange-500 text-white p-6 rounded-full shadow-2xl hover:bg-orange-600 text-lg font-bold">
-    Call Now
-  </a>
-</body>
-</html>
+      <h1 class="text-
