--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <nav class="fixed top-0 w-full bg-white/90 backdrop-blur z-40 border-b">
     <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-      <img src="https://i.imgur.com/vnB21TO.png" alt="uHate2Paint LLC" class="h-20">
+      <img src="https://i.imgur.com/vnB21TO.png" alt="uHate2Paint LLC" class="h-24"> <!-- Larger logo -->
       <div class="hidden md:flex space-x-10 text-lg">
         <a href="#services" class="hover:text-orange-500">Services</a>
         <a href="#portfolio" class="hover:text-orange-500">Portfolio</a>
@@ -40,4 +40,7 @@
   <!-- YOUR DOOR PHOTO AS FULL BACKGROUND (no centered logo) -->
   <header class="hero">
     <div class="content max-w-5xl mx-auto">
-      <h1 class="text-
+      <h1 class="text-5xl md:text-7xl font-bold mb-6 drop-shadow-2xl">You Hate to Paint?<br>We LOVE It.</h1>
+      <p class="text-2xl md:text-4xl mb-12 drop-shadow-lg">High-End Residential Painting • Jensen Beach & Treasure Coast</p>
+      <div class="space-x-6">
+        <a href="tel:8636622529" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-5 px-14 rounded-full text-
