--- a/index.html
+++ b/index.html
@@ -37,10 +37,22 @@
     </div>
   </nav>
 
-  <!-- YOUR DOOR PHOTO AS FULL BACKGROUND (no centered logo) -->
+  <!-- YOUR DOOR PHOTO AS FULL BACKGROUND (text restored) -->
   <header class="hero">
     <div class="content max-w-5xl mx-auto">
       <h1 class="text-5xl md:text-7xl font-bold mb-6 drop-shadow-2xl">You Hate to Paint?<br>We LOVE It.</h1>
       <p class="text-2xl md:text-4xl mb-12 drop-shadow-lg">High-End Residential Painting • Jensen Beach & Treasure Coast</p>
       <div class="space-x-6">
-        <a href="tel:8636622529" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-5 px-14 rounded-full text-
+        <a href="tel:8636622529" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-5 px-14 rounded-full text-2xl shadow-2xl">Call 863-662-2529</a>
+        <a href="#contact" class="bg-white text-blue-900 hover:bg-gray-100 font-bold py-5 px-14 rounded-full text-2xl shadow-2xl">Free Estimate</a>
+      </div>
+    </div>
+  </header>
+
+  <!-- Portfolio, Contact, Footer remain the same -->
+
+  <a href="tel:8636622529" class="fixed-cta bg-orange-500 text-white p-6 rounded-full shadow-2xl hover:bg-orange-600 text-lg font-bold">
+    Call Now
+  </a>
+</body>
+</html>
