--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     body,html{margin:0;height:100%}
     h1,h2,h3{font-family:'Playfair Display',serif}body{font-family:'Inter',sans-serif}
     .hero{
-      background:url('https://i.imgur.com/vzFFVUB.jpg') center/cover no-repeat fixed;
+      background:url('https://i.imgur.com/caDyyEb.jpg') center/cover no-repeat fixed;
       height:100vh;
       display:flex;
       align-items:center;
@@ -37,7 +37,7 @@
     </div>
   </nav>
 
-  <!-- YOUR DOOR PHOTO AS FULL BACKGROUND (text restored) -->
+  <!-- THIS PHOTO AS FULL HERO BACKGROUND -->
   <header class="hero">
     <div class="content max-w-5xl mx-auto">
       <h1 class="text-5xl md:text-7xl font-bold mb-6 drop-shadow-2xl">You Hate to Paint?<br>We LOVE It.</h1>
